--- a/To-Do-List/assets/style/style.css
+++ b/To-Do-List/assets/style/style.css
@@ -86,3 +86,29 @@ button:hover {
 #taskList li .delete-button:hover {
     background-color: #e60000;
 }
+
+/* Tugas selesai */
+#taskList li.completed span {
+    text-decoration: line-through;
+    color: #888;
+}
+
+/* Checkbox */
+#taskList li input[type="checkbox"] {
+    margin-right: 10px;
+}
+
+/* Tombol Delete */
+.delete-button {
+    background-color: #ff4d4d;
+    border: none;
+    border-radius: 4px;
+    color: white;
+    cursor: pointer;
+    padding: 5px 10px;
+    transition: background-color 0.3s;
+}
+
+.delete-button:hover {
+    background-color: #e60000;
+}
